# pkg/manager/api_inner_model.go
@@ -1,6 +1,8 @@
 package manager
 
 import (
+	"encoding/json"
+
 	"github.com/Klevry/klevr/pkg/common"
 )
 
@@ -29,5 +31,60 @@ type KlevrEvent struct {
 	EventTime *common.JSONTime `json:"eventTime"`
 	Result    string           `json:"result"`
 	Log       string           `json:"log"`
-	TaskName  string           `json:"taskName"`
+}
+
+type KlevrEventTaskInfo struct {
+	ID              uint64            `json:"id"`
+	ZoneID          uint64            `json:"zoneId"`
+	Name            string            `json:"name"`
+	TaskType        common.TaskType   `json:"taskType"`
+	AgentKey        string            `json:"agentKey"`
+	ExeAgentKey     string            `json:"exeAgentKey"`
+	Status          common.TaskStatus `json:"status"`
+	TotalStepCount  uint              `json:"totalStepCount"`
+	CurrentStep     uint              `json:"currentStep"`
+	FailedStep      uint              `json:"failedStep"`
+	IsFailedRecover bool              `json:"isFailedRecover"`
+	UpdatedAt       *common.JSONTime  `json:"updatedAt"`
+}
+
+type KlevrEventTaskResult struct {
+	Task             KlevrEventTaskInfo `json:"taskInfo"`
+	Complete         bool               `json:"complete"`
+	Success          bool               `json:"success"`
+	IsCommandError   bool               `json:"isCommandError"`
+	Result           string             `json:"result"`
+	Log              string             `json:"log"`
+	ExceptionMessage string             `json:"exceptionMessage"`
+	ExceptionTrace   string             `json:"exceptionTrace"`
+}
+
+func NewKlevrEventTaskResultString(task *Tasks, complete bool, success bool, isCommandError bool, result string, log string, exceptionMessage string, exceptionTrace string) string {
+	b, err := json.Marshal(KlevrEventTaskResult{
+		Task: KlevrEventTaskInfo{
+			ID:              task.Id,
+			ZoneID:          task.ZoneId,
+			Name:            task.Name,
+			TaskType:        task.TaskType,
+			AgentKey:        task.AgentKey,
+			ExeAgentKey:     task.ExeAgentKey,
+			Status:          task.Status,
+			TotalStepCount:  task.TaskDetail.TotalStepCount,
+			CurrentStep:     task.TaskDetail.CurrentStep,
+			FailedStep:      task.TaskDetail.FailedStep,
+			IsFailedRecover: task.TaskDetail.IsFailedRecover,
+			UpdatedAt:       &common.JSONTime{Time: task.UpdatedAt},
+		},
+		Complete:         complete,
+		Success:          success,
+		IsCommandError:   isCommandError,
+		ExceptionMessage: exceptionMessage,
+		ExceptionTrace:   exceptionTrace,
+	})
+
+	if err != nil {
+		panic(err)
+	}
+
+	return string(b)
 }
