# pkg/manager/docs/swagger.json
@@ -1,18 +1,12 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Klevr-Manager API",
-        "contact": {
-            "name": "mrchopa",
-            "email": "ys3gods@gmail.com"
-        },
-        "license": {},
-        "version": "1.0"
+        "contact": {},
+        "license": {}
     },
-    "basePath": "/",
     "paths": {
-        "/accounts/{id}": {
-            "get": {
+        "/agents/handshake": {
+            "put": {
                 "description": "에이전트 프로세스가 기동시 최초 한번 handshake를 요청하여 에이전트 정보 등록 및 에이전트 실행에 필요한 실행 정보를 반환한다.",
                 "consumes": [
                     "application/json"
@@ -23,7 +17,171 @@
                 "tags": [
                     "agents"
                 ],
-                "summary": "에이전트의 handshake 요청을 받아 처리한다."
+                "summary": "에이전트의 handshake 요청을 받아 처리한다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API KEY",
+                        "name": "X-API-KEY",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "AGENT KEY",
+                        "name": "X-AGENT-KEY",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ZONE ID",
+                        "name": "X-ZONE-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "agent 정보",
+                        "name": "b",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.Body"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Body"
+                        }
+                    }
+                }
+            }
+        },
+        "/agents/reports/{agentKey}": {
+            "get": {
+                "description": "secondary 에이전트의 primary 에이전트 상태 확인 요청을 받아 primary 재선출 및 primary 정보를 반환한다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agents"
+                ],
+                "summary": "secondary 에이전트의 primary 상태 확인 요청을 처리한다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API KEY",
+                        "name": "X-API-KEY",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "AGENT KEY",
+                        "name": "X-AGENT-KEY",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ZONE ID",
+                        "name": "X-ZONE-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "agent key",
+                        "name": "agentKey",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "agent 정보",
+                        "name": "b",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.Body"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Body"
+                        }
+                    }
+                }
+            }
+        },
+        "/agents/{agentKey}": {
+            "put": {
+                "description": "primary 에이전트의 polling 요청을 받아 primary 에이전트의 실행정보 갱신, nodes 정보 갱신, task 할당 및 상태 업데이트를 수행한다.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "agents"
+                ],
+                "summary": "primary 에이전트의 polling 요청을 받아 처리한다.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "API KEY",
+                        "name": "X-API-KEY",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "AGENT KEY",
+                        "name": "X-AGENT-KEY",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "ZONE ID",
+                        "name": "X-ZONE-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "agent key",
+                        "name": "agentKey",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "agent 정보",
+                        "name": "b",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/common.Body"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Body"
+                        }
+                    }
+                }
             }
         },
         "/temp": {
@@ -39,6 +197,25 @@
                     "temp"
                 ],
                 "summary": "에이전트의 handshake 요청을 받아 처리한다."
+            }
+        }
+    },
+    "definitions": {
+        "common.Body": {
+            "type": "object",
+            "properties": {
+                "agent": {
+                    "type": "BodyAgent"
+                },
+                "me": {
+                    "type": "Me"
+                },
+                "task": {
+                    "type": "array",
+                    "items": {
+                        "type": "KlevrTask"
+                    }
+                }
             }
         }
     }
